src/objects/Opportunity_Product_History__c.object
<CustomObject>
    <description>When a product is removed from an opportunity as part of a cancellation, a record is created in this object to log the change</description>
    <fields>
        <fullName>Cancellation_Completed_Date__c</fullName>
        <description>Date the cancellation was completed</description>
        <formula>CreatedDate</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>Date the cancellation was completed, this may differ from the Customer Cancellation</inlineHelpText>
        <label>Cancellation Completed Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Cancellation_Fee_Opportunity__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Related cancellation fee opportunity</description>
        <inlineHelpText>Related cancellation fee opportunity</inlineHelpText>
        <label>Cancellation Fee Opportunity</label>
        <referenceTo>Opportunity</referenceTo>
        <relationshipName>Opportunity_Product_History</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Notes__c</fullName>
        <description>Notes associated with this record</description>
        <inlineHelpText>Notes associated with this record</inlineHelpText>
        <label>Notes</label>
        <length>1000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Opportunity__c</fullName>
        <deleteConstraint>Restrict</deleteConstraint>
        <description>Opportunity this record relates to</description>
        <inlineHelpText>Opportunity this record relates to</inlineHelpText>
        <label>Opportunity</label>
        <referenceTo>Opportunity</referenceTo>
        <relationshipName>Opportunity_Product_Histories</relationshipName>
        <required>true</required>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Original_OPL_Id__c</fullName>
        <description>Stores OPL id of original opportunity product, this is to ensure that if we encounter problems with sales invoice lines linking to deleted OPL lines, we can create a relationship between invoice line and Opportunity product history.</description>
        <inlineHelpText>Stores OPL id of original opportunity product</inlineHelpText>
        <label>Original OPL Id</label>
        <length>18</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Product__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Product</label>
        <referenceTo>Product2</referenceTo>
        <relationshipName>Opportunity_Product_Histories</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Quantity__c</fullName>
        <description>Quantity of original products changed</description>
        <inlineHelpText>Quantity of original products changed</inlineHelpText>
        <label>Quantity</label>
        <precision>12</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Status__c</fullName>
        <description>Displays what happened to the original product</description>
        <inlineHelpText>Displays what happened to the original product</inlineHelpText>
        <label>Status</label>
        <picklist>
            <picklistValues>
                <fullName>Cancelled</fullName>
                <default>true</default>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Total_Price__c</fullName>
        <description>Total Value (Qty * Sales Price)</description>
        <formula>Quantity__c *  Unit_Price__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>Total Value (Qty * Sales Price)</inlineHelpText>
        <label>Total Price</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Unit_Price__c</fullName>
        <description>Sales price (per unit) of the original product changed</description>
        <inlineHelpText>Sales price (per unit) of the original product changed</inlineHelpText>
        <label>Sales Price</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <label>Product History</label>
    <listViews>
        <fullName>All</fullName>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <displayFormat>OPH-{000000}</displayFormat>
        <label>Opportunity Product History Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Product Histories</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>